Fix volume slider visibility issues on hover

--- a/src/sass/global.sass
+++ b/src/sass/global.sass
@@ -383,6 +383,7 @@ ul
     transform: rotate(-90deg)
     transform-origin: 0px 88px
     transition: opacity 0.2s ease-in-out
+    z-index: 9999
     opacity: 0
 
 @include media-breakpoint-up(lg)
